# ocaml-languages

./: .gitignore  README.md  calc.opam  dune-project
fun/: fun.opam
fun/examples/: fib.fun  fib_time.fun  mergesort.fun  sort.fun  test.fun  unused.fun
fun/lib/: Ast.ml  Eval.ml  Lexer.mll  Parser.mly
let/lib/: Ast.ml  Eval.ml
lib/: Ast.ml  Eval.ml  Lexer.mll  Parser.mly  dune
lista6_zad4/: time_fib.ml  times  utop
lista6_zad4/time/: dune-project
lista6_zad4/time/lib/: dune
lista6_zad4/time/test/: dune
while/examples/: array.while  euclidean.while  fib.while  for.while  onp_evaluator.while  sort_array.while  spigot.while  test_if.while
while/lib/: Ast.ml  Eval.ml  Lexer.mll  Parser.mly  dune
